--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,12 @@
+*{
+    margin: 0;
+    padding: 0; 
+}
+
+.header{
+    width: 100%;
+}
+
 h1, h4{
     text-align: center;
 }
@@ -5,24 +14,41 @@ h1, h4{
 #contenido {
     margin-top: 40px;
 }
-.borrar-tweet,
-.borrar-tweet:hover {
+.borrar-tweet{
     float: right;
-    margin:  5px 5px auto;
+    padding: 1em;
     cursor: pointer;
     color: red;
     font-weight: bold;
     
 }
 
-li{
-    background-color :white;
-    width: 100%;
-    height: 30px;
+.idea{
+    background-color:white;
+    border-radius: 2px;
+    padding: 1em;
+    margin: 1em 0 1em 0;
+    border-radius: 10px;
+    box-shadow: 0px 2px 5px rgba(0,0,0, 0.16), 0px 2px 10px rgba(0,0,0, 0.12);
 }
+
+.fa-lightbulb{
+   color: yellow;
+   padding: 0.5em;
+   font-size: 1.5em;
+}
+
+
+.idea p{
+    padding: 1em;
+    text-align: justify;
+}
+
+
 #logo{
-   margin-left: 20px;
-   margin-right: 10px;
+   margin: 0 auto;
+   width: 100%;
+   
 }
 
 textarea{ 
@@ -31,4 +57,8 @@ textarea{
 
 body{
     background-color: rgba(248, 248, 255, 1);
+}
+
+.shadow{
+    box-shadow: 0px 2px 5px rgba(0,0,0, 0.16), 0px 2px 10px rgba(0,0,0, 0.12);
 }
