--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -5,6 +5,7 @@
 
 .header{
     width: 100%;
+    text-align: center;
 }
 
 h1, h4{
@@ -12,7 +13,9 @@ h1, h4{
 }
 
 #contenido {
-    margin-top: 40px;
+    max-width: 1300px;
+    width: 80%;
+    margin: 40px auto;
 }
 .borrar-tweet{
     float: right;
@@ -40,7 +43,7 @@ h1, h4{
 
 
 .idea p{
-    padding: 1em;
+    padding: 1em 1em 0 1em;
     text-align: justify;
 }
 
@@ -49,6 +52,27 @@ h1, h4{
    margin: 0 auto;
    width: 100%;
    
+}
+form{
+    padding: 0.6em;
+}
+
+@media (max-width: 800px){
+    .header{
+        width: 50%;
+    }
+    #logo{
+    width:100px
+  }
+}
+@media (min-width: 1200px){
+    .header{
+        width: 50%;
+    }
+    #logo{
+    width:100%;
+    margin: 0 50%;
+  }
 }
 
 textarea{ 
