--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -57,6 +57,12 @@ form{
     padding: 0.6em;
 }
 
+@media (max-width:500px){
+  .header {width: 100%;}
+}
+
+
+
 @media (max-width: 800px){
     .header{
         width: 50%;
