--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,95 +1,110 @@
-*{
-    margin: 0;
-    padding: 0; 
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.header{
-    width: 100%;
-    text-align: center;
+.header {
+  width: 50%;
+  text-align: center;
 }
 
-h1, h4{
-    text-align: center;
+#logo {
+  margin: 0 auto;
+  width: 100%;
+  padding-left: 50%;
+}
+
+h1,
+h4 {
+  text-align: center;
 }
 
 #contenido {
-    max-width: 1300px;
-    width: 80%;
-    margin: 40px auto;
-}
-.borrar-tweet{
-    float: right;
-    padding: 1em;
-    cursor: pointer;
-    color: red;
-    font-weight: bold;
-    
+  max-width: 1300px;
+  width: 100%;
+  margin: 40px auto;
 }
 
-.idea{
-    background-color:white;
-    border-radius: 2px;
-    padding: 1em;
-    margin: 1em 0 1em 0;
-    border-radius: 10px;
-    box-shadow: 0px 2px 5px rgba(0,0,0, 0.16), 0px 2px 10px rgba(0,0,0, 0.12);
+.borrar-tweet {
+  float: right;
+  padding: 1em;
+  cursor: pointer;
+  color: red;
+  font-weight: bold;
 }
 
-.fa-lightbulb{
-   color: yellow;
-   padding: 0.5em;
-   font-size: 1.5em;
+.idea {
+  background-color: white;
+  border-radius: 2px;
+  padding: 1em;
+  margin: 1em 0 1em 0;
+  border-radius: 10px;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16), 0px 2px 10px rgba(0, 0, 0, 0.12);
 }
 
-
-.idea p{
-    padding: 1em 1em 0 1em;
-    text-align: justify;
+.fa-lightbulb {
+  color: yellow;
+  padding: 0.5em;
+  font-size: 1.5em;
 }
 
-
-#logo{
-   margin: 0 auto;
-   width: 100%;
-   
-}
-form{
-    padding: 0.6em;
+.idea p {
+  padding: 1em 1em 0 1em;
+  text-align: justify;
 }
 
-@media (max-width:500px){
-  .header {width: 100%;}
-  #logo{width: 100%;}
+form {
+  padding: 0.6em 0 0 0;
 }
-
-
-
-@media (max-width: 800px){
-    .header{
-        width: 50%;
-    }
-    #logo{
-    width:100px
+@media (max-width: 1700px) {
+  .header {
+    width: 50%;
   }
-}
-@media (max-width: 1200px){
-    .header{
-        width: 50%;
-    }
-    #logo{
-    width:100%;
+  #logo {
+    padding-left: 0;
+    width: 300px;
     margin: 0 50%;
   }
 }
 
-textarea{ 
-    border-radius: 10px;
+@media (max-width: 500px) {
+  .header {
+    width: 100%;
+  }
+  #logo {
+    padding-left: 0;
+    width: 100%;
+  }
 }
 
-body{
-    background-color: rgba(248, 248, 255, 1);
+@media (max-width: 800px) {
+  .header {
+    width: 50%;
+  }
+  #logo {
+    padding-left: 0;
+    width: 100px;
+  }
+}
+@media (max-width: 1200px) {
+  .header {
+    width: 50%;
+  }
+  #logo {
+    padding-left: 0;
+    width: 100%;
+    margin: 0 50%;
+  }
 }
 
-.shadow{
-    box-shadow: 0px 2px 5px rgba(0,0,0, 0.16), 0px 2px 10px rgba(0,0,0, 0.12);
+textarea {
+  border-radius: 10px;
+}
+
+body {
+  background-color: rgba(248, 248, 255, 1);
+}
+
+.shadow {
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16), 0px 2px 10px rgba(0, 0, 0, 0.12);
 }
