--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,28 +1,108 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: "Roboto", sans-serif;
+}
+body {
+  background-color: rgba(248, 248, 255, 1);
 }
 
-.header {
-  width: 50%;
-  text-align: center;
-}
-
-#logo {
+.container {
+  max-width: 1200px;
+  width: 95%;
   margin: 0 auto;
-  width: 100%;
-  padding-left: 50%;
 }
-
-h1,
-h4 {
+.mode {
+  padding: 0.5em;
+  position: absolute;
+  right: 0;
+}
+.switch {
+  background: #343d5b;
+  border-radius: 1000px;
+  border: none;
+  height: 30px;
+  position: relative;
+  cursor: pointer;
+  display: flex;
+  outline: none;
+}
+.switch span {
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  display: block;
+  background: none;
+  color: #fff;
+}
+.header {
+  margin: 30px auto;
+  width: 100%;
+}
+#logo {
+  width: 75%;
+  padding: 0 15%;
+}
+.title {
   text-align: center;
+  margin: 0.3em auto;
+  font-weight: normal;
+}
+.label {
+  font-weight: normal;
 }
 
-#contenido {
-  max-width: 1300px;
+.fa-lightbulb {
+  color: yellow;
+  padding: 0.5em;
+  font-size: 1.5em;
+}
+.tweet-form {
+  display: inline;
+}
+.tweet-form textarea {
+  width: 95%;
+  padding: 7px;
+  border-radius: 10px;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16), 0px 2px 10px rgba(0, 0, 0, 0.12);
+  min-height: 40px;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  background-color: #fff;
+  border: 1px solid #d1d1d1;
+}
+.tweet-form textarea:focus {
+  outline: none;
+}
+.tweet-form input {
+  margin: 0.5em 0;
   width: 100%;
-  margin: 40px auto;
+  display: inline-block;
+  height: 38px;
+  padding: 0 30px;
+  color: #fff;
+  text-align: center;
+  font-size: 11px;
+  font-weight: 600;
+  line-height: 38px;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  white-space: nowrap;
+  background-color: #33c3f0;
+  border-radius: 4px;
+  border: 1px solid #bbb;
+  cursor: pointer;
+  box-sizing: border-box;
+}
+.tweet-form input:focus {
+  outline: none;
+}
+h4 {
+  font-weight: normal;
+  text-align: center;
+  font-size: 1.5em;
+  padding: 1em;
 }
 
 .borrar-tweet {
@@ -32,7 +112,6 @@ h4 {
   color: red;
   font-weight: bold;
 }
-
 .idea {
   background-color: white;
   border-radius: 2px;
@@ -42,69 +121,104 @@ h4 {
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16), 0px 2px 10px rgba(0, 0, 0, 0.12);
 }
 
-.fa-lightbulb {
-  color: yellow;
-  padding: 0.5em;
-  font-size: 1.5em;
-}
-
 .idea p {
   padding: 1em 1em 0 1em;
   text-align: justify;
 }
 
-form {
-  padding: 0.6em 0 0 0;
-}
-@media (max-width: 1700px) {
-  .header {
-    width: 50%;
-  }
-  #logo {
-    padding-left: 0;
-    width: 300px;
-    margin: 0 50%;
-  }
-}
-
-@media (max-width: 500px) {
-  .header {
-    width: 100%;
-  }
-  #logo {
-    padding-left: 0;
-    width: 100%;
-  }
-}
-
-@media (max-width: 800px) {
-  .header {
-    width: 50%;
-  }
-  #logo {
-    padding-left: 0;
-    width: 100px;
-  }
-}
-@media (max-width: 1200px) {
-  .header {
-    width: 50%;
-  }
-  #logo {
-    padding-left: 0;
-    width: 100%;
-    margin: 0 50%;
-  }
-}
-
-textarea {
-  border-radius: 10px;
-}
-
-body {
-  background-color: rgba(248, 248, 255, 1);
-}
-
 .shadow {
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16), 0px 2px 10px rgba(0, 0, 0, 0.12);
 }
+
+@media only screen and (min-device-width: 550px) and (max-device-width: 800px) {
+  
+  .container {
+    max-width: 799px;
+    width: 80%;
+    font-size:2em;
+  }
+  .label {
+    margin-top: 3em;
+  }
+  .tweet-form textarea {
+    margin-top: 2em;
+    width: 97%;
+    height: 60px;
+    font-size: 0.7em;
+    height: 60px;
+  }
+}
+@media only screen and (min-device-width: 810px) and (max-device-width: 1050px) {
+  .mode{
+    right: 0;
+  }
+  .container{
+    font-size: 1.6em;
+    width: 80;
+    max-width: 1000;
+  }
+  .title {
+    font-size: 80px;
+  }
+  h4 {
+    padding: 0.1em;
+  }
+  .row {
+    display: grid;
+    grid-template-columns: 6fr 6fr;
+    grid-template-rows: 30px;
+  }
+  .six {
+    padding: 0 0.5em 0 0.5em;
+  }
+  .tweet-form textarea {
+    width: 96.4%;
+    height: 80px;
+    font-size: 1em;
+  }
+  .tweet-form input {
+    height: 70px;
+    font-size: 1em;
+  }
+}
+
+@media only screen and (min-device-width: 1050px) and (max-device-width: 2800px) {
+  .container{
+    font-size: 1.6em;
+    width: 80;
+    max-width: 1200px;
+  }
+  .mode{
+    right: 10%;
+  }
+  .header{
+    width: 50%;
+  }
+  .logo{
+    width: 50%;
+  }
+  .title {
+    font-size: 80px;
+  }
+  h4 {
+    padding: 0.1em;
+  }
+  .row {
+    display: grid;
+    grid-template-columns: 6fr 6fr;
+    grid-template-rows: 30px;
+  }
+  .six {
+    padding: 0 0.5em 0 0.5em;
+  }
+  .tweet-form textarea {
+    width: 96.4%;
+    height: 80px;
+    font-size: 1em;
+  }
+  .tweet-form input {
+    height: 70px;
+    font-size: 1em;
+  }
+}
+
