--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -5,6 +5,7 @@
 }
 body {
   background-color: rgba(248, 248, 255, 1);
+  transition: 0.5s ease all;
 }
 
 .container {
@@ -21,12 +22,35 @@ body {
   background: #343d5b;
   border-radius: 1000px;
   border: none;
-  height: 30px;
   position: relative;
   cursor: pointer;
   display: flex;
   outline: none;
 }
+.switch::after{
+  content: '';
+  display: block;
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  background:#f1f1f1;
+  top:0;
+  left:0;
+  right: unset;
+  border-radius: 100px;
+  transition: .3s ease all;
+  box-shadow:  0px 0px 2px 2px rgba(0, 0, 0, 0.2);
+}
+
+.active{
+  background-color: orange;
+  color: #000;
+}
+.active::after{
+  left:unset;
+  right: 0;
+}
+
 .switch span {
   width: 30px;
   height: 30px;
@@ -47,9 +71,11 @@ body {
   text-align: center;
   margin: 0.3em auto;
   font-weight: normal;
+  transition: 0.5s ease all;
 }
 .label {
   font-weight: normal;
+  transition: 0.5s ease all;
 }
 
 .fa-lightbulb {
@@ -70,6 +96,7 @@ body {
   padding-bottom: 6px;
   background-color: #fff;
   border: 1px solid #d1d1d1;
+  transition: 0.5s ease all;
 }
 .tweet-form textarea:focus {
   outline: none;
@@ -94,6 +121,7 @@ body {
   border: 1px solid #bbb;
   cursor: pointer;
   box-sizing: border-box;
+  transition: 0.5s ease all;
 }
 .tweet-form input:focus {
   outline: none;
@@ -103,6 +131,7 @@ h4 {
   text-align: center;
   font-size: 1.5em;
   padding: 1em;
+  transition: 0.5s ease all;
 }
 
 .borrar-tweet {
@@ -113,12 +142,12 @@ h4 {
   font-weight: bold;
 }
 .idea {
-  background-color: white;
   border-radius: 2px;
   padding: 1em;
   margin: 1em 0 1em 0;
   border-radius: 10px;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16), 0px 2px 10px rgba(0, 0, 0, 0.12);
+  transition: 0.5s ease all;
 }
 
 .idea p {
@@ -129,6 +158,29 @@ h4 {
 .shadow {
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16), 0px 2px 10px rgba(0, 0, 0, 0.12);
 }
+
+.dark{
+  background-color: #34373a;
+  color: #fefefe;
+}
+.tweet-form textarea.darkfontA{
+  background-color: #4b4d50;
+  color:#ffffff;
+  border: 1px solid #141517;
+}
+
+.tweet-form input.darkfontB{
+  background-color:#3366ff;
+  border: none;
+  color: #fefefe;
+}
+
+.darkidea{
+   color: #ffffff;  
+  background-color: #4b4d50;
+}
+
+
 
 @media only screen and (min-device-width: 550px) and (max-device-width: 800px) {
   
